--- a/src/index.html
+++ b/src/index.html
@@ -4,23 +4,104 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Web-GL</title>
+    <link rel="stylesheet" href="style.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body>
-    <canvas id="canvas"></canvas>
-    <div id="uiContainer">
-      <div id="ui">
-        <div id="cameraAngle"></div>
-        <div id="x"></div>
-        <div id="y"></div>
-        <div id="z"></div>
-        <div id="angleX"></div>
-        <div id="angleY"></div>
-        <div id="angleZ"></div>
-        <div id="scaleX"></div>
-        <div id="scaleY"></div>
-        <div id="scaleZ"></div>
+    <div id="container" class="container-fluid">
+      <div class="row">
+        <div class="col-auto me-5">
+          <canvas id="canvas"></canvas>
+        </div>
+        <div class="col-2 me-5">
+          <!-- Rotation Slider -->
+          <div class="row mb-2">
+            <div class="title-tools">Rotation</div>
+            <div class="slider-container">
+                <label for="rotate-x" class="form-label">Rotate-x</label>
+                <p id="rotate-x-value" class="d-inline value-input">0</p>
+                <input id="rotate-x" type="range" min="-360" max="360" value="0" step="1" class="form-range">
+                <label for="rotate-y" class="form-label">Rotate-y</label>
+                <p id="rotate-y-value" class="d-inline value-input">0</p>
+                <input id="rotate-y" type="range" min="-360" max="360" value="0" step="1" class="form-range">
+                <label for="rotate-z" class="form-label">Rotate-z</label>
+                <p id="rotate-z-value" class="d-inline value-input">0</p>
+                <input id="rotate-z" type="range" min="-360" max="360" value="0" step="1" class="form-range">
+            </div>
+          </div>
+          <!-- Translation Slider -->
+          <div class="row mb-2">
+            <div class="title-tools">Translation</div>
+            <div class="slider-container">
+                <label for="translate-x" class="form-label">Translate-x</label>
+                <p id="translate-x-value" class="d-inline value-input">0</p>
+                <input id="translate-x" type="range" min="-700" max="700" value="0" step="1" class="form-range">
+                <label for="translate-y" class="form-label">Translate-y</label>
+                <p id="translate-y-value" class="d-inline value-input">0</p>
+                <input id="translate-y" type="range" min="-600" max="600" value="0" step="1" class="form-range">
+                <label for="translate-z" class="form-label">Translate-z</label>
+                <p id="translate-z-value" class="d-inline value-input">0</p>
+                <input id="translate-z" type="range" min="-700" max="700" value="0" step="1" class="form-range">
+            </div>
+          </div>
+          <div class="row mb-2">
+          <!-- Scale Slider -->
+          <div class="title-tools" >Scale</div>
+            <div class="slider-container">
+                <label for="scale-x" class="form-label">Scale-x</label>
+                <p id="scale-x-value" class="d-inline value-input">1</p>
+                <input id="scale-x" type="range" min="-5" max="5" value="1" step="0.1" class="form-range">
+                <label for="scale-y" class="form-label">Scale-y</label>
+                <p id="scale-y-value" class="d-inline value-input">1</p>
+                <input id="scale-y" type="range" min="-5" max="5" value="1" step="0.1" class="form-range">
+                <label for="scale-z" class="form-label">Scale-z</label>
+                <p id="scale-z-value" class="d-inline value-input">1</p>
+                <input id="scale-z" type="range" min="-5" max="5" value="1" step="0.1" class="form-range">
+            </div>
+          </div>
+        </div>
+        <div class="col-2">
+          <!-- Camera Slider -->
+          <div class="row">
+            <div class="title-tools"> Camera</div>
+            <div class="slider-container">
+              <label for="rotate" class="form-label">Rotate</label>
+              <p id="camera-rotate-value" class="d-inline value-input">0</p>
+              <input id="camera-rotate" type="range" min="-360" max="360" value="0" step="1" class="form-range">
+              <label for="radius" class="form-label">Radius</label>
+              <p id="camera-radius-value" class="d-inline value-input">5</p>
+              <input id="camera-radius" type="range" min="0" max="50" value="5" step="0.1" class="form-range">
+            </div>
+          </div>
+          <!-- Projection Selection -->
+          <div class="row mb-2">
+            <label for="projectionView" class="title-tools">Projection</label>
+            <select class="form-select mb-3" id="projection-view">
+                <option value="1" selected>Perspective</option>
+                <option value="2">Orthographic</option>
+                <option value="3">Oblique</option>
+            </select>
+          </div>
+          <!-- Shader Selection -->
+          <div class="row mb-2">
+            <label for="shader" class="title-tools">Shader</label>
+            <select class="form-select mb-3" id="shader-view">
+                <option value="1" selected>Non Active</option>
+                <option value="2">Active</option>
+            </select>
+          </div>
+          <!-- Load Section -->
+          <div class="row mb-5">
+            <label for="fileInput" class="title-tools">Load File</label>
+            <input class="form-control" type="file" id="fileinput" onchange="importData()">
+          </div>
+          <!-- Help Button -->
+          <div class="row mb-2">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              Help
+            </button>
       </div>
     </div>
     <!-- vertex shader -->
@@ -51,14 +132,9 @@
     </script>
     <script type="text/javascript" src="web-utils.js"></script>
     <script type="text/javascript" src="web-lessons-ui.js"></script>
-    <!-- <script type="text/javascript" src="script.js"></script> -->
+    <script type="text/javascript" src="state.js"></script>
     <script type="text/javascript" src="scriptCube.js"></script>
-    <!--
-for most samples webgl-utils only provides shader compiling/linking and
-canvas resizing because why clutter the examples with code that's the same in every sample.
-See https://webglfundamentals.org/webgl/lessons/webgl-boilerplate.html
-and https://webglfundamentals.org/webgl/lessons/webgl-resizing-the-canvas.html
-for webgl-utils, m3, m4, and webgl-lessons-ui.
--->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
