--- a/src/index.html
+++ b/src/index.html
@@ -81,9 +81,9 @@
         <div class="row mb-2">
           <label for="projectionView" class="title-tools">Projection</label>
           <select class="form-select mb-3" id="projection-view">
-            <option value="1" selected>Perspective</option>
+            <option value="1" selected>Oblique</option>
             <option value="2">Orthographic</option>
-            <option value="3">Oblique</option>
+            <option value="3">Perspective</option>
           </select>
         </div>
         <!-- Shader Selection -->
@@ -134,8 +134,9 @@
     </script>
       <script type="text/javascript" src="web-utils.js"></script>
       <script type="text/javascript" src="state.js"></script>
-      <script type="text/javascript" src="scriptPyramid.js"></script>
       <script type="text/javascript" src="scriptCube.js"></script>
+      <script type="text/javascript" src="scriptPyramid.js"></script>
+      <script type="text/javascript" src="scriptPentaPrism.js"></script>
       <script type="text/javascript" src="script.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
