--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <div id="container" class="container-fluid">
       <div class="row">
         <div class="col-auto me-5">
-          <canvas id="canvas"></canvas>
+          <canvas id="canvas" width="600px" height="600px"></canvas>
         </div>
         <div class="col-2 me-5">
           <!-- Rotation Slider -->
@@ -104,7 +104,7 @@
             </button>
       </div>
     </div>
-    <!-- vertex shader -->
+    <!-- vertex shader
     <script id="vertex-shader-3d" type="x-shader/x-vertex">
       attribute vec4 a_position;
       attribute vec4 a_color;
@@ -120,8 +120,8 @@
         v_color = a_color;
       }
     </script>
-    <!-- fragment shader -->
-    <script id="fragment-shader-3d" type="x-shader/x-fragment">
+    fragment shader -->
+    <!-- <script id="fragment-shader-3d" type="x-shader/x-fragment">
       precision mediump float;
       // Passed in from the vertex shader.
       varying vec4 v_color;
@@ -129,11 +129,16 @@
       void main() {
         gl_FragColor = v_color;
       }
-    </script>
-    <script type="text/javascript" src="web-utils.js"></script>
-    <script type="text/javascript" src="web-lessons-ui.js"></script>
+    </script> -->
+    <!-- <script type="text/javascript" src="web-utils.js"></script>
+    <script type="text/javascript" src="web-lessons-ui.js"></script> -->
+    <script type="text/javascript" src="utils.js"></script>
     <script type="text/javascript" src="state.js"></script>
-    <script type="text/javascript" src="scriptCube.js"></script>
+    <script type="text/javascript" src="webGL.js"></script>
+    <script type="text/javascript" src="main.js"></script>
+
+    <!-- <script type="text/javascript" src="scriptCube.js"></script> -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
