--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,18 @@
   <div id="container" class="container-fluid">
     <div class="row">
       <div class="col-auto me-5">
-        <canvas id="canvas" width="600px" height="600px"></canvas>
+        <canvas id="canvas" width="700px" height="600px"></canvas>
       </div>
       <div class="col-2 me-5">
+        <!-- Object Selection -->
+        <div class="row mb-2">
+          <label for="object" class="title-tools">Object</label>
+          <select class="form-select mb-3" id="object-option">
+            <option value="1" selected>Hollow Cube</option>
+            <option value="2">Hollow Pyramid</option>
+            <option value="3">Hollow Prism</option>
+          </select>
+        </div>
         <!-- Rotation Slider -->
         <div class="row mb-2">
           <div class="title-tools">Rotation</div>
@@ -50,63 +59,101 @@
         </div>
         <div class="row mb-2">
           <!-- Scale Slider -->
-          <div class="title-tools" >Scale</div>
-            <div class="slider-container">
-                <label for="scale-x" class="form-label">Scale-x</label>
-                <p id="scale-x-value" class="d-inline value-input">1</p>
-                <input id="scale-x" type="range" min="-5" max="5" value="1" step="0.1" class="form-range">
-                <label for="scale-y" class="form-label">Scale-y</label>
-                <p id="scale-y-value" class="d-inline value-input">1</p>
-                <input id="scale-y" type="range" min="-5" max="5" value="1" step="0.1" class="form-range">
-                <label for="scale-z" class="form-label">Scale-z</label>
-                <p id="scale-z-value" class="d-inline value-input">1</p>
-                <input id="scale-z" type="range" min="-5" max="5" value="1" step="0.1" class="form-range">
+          <div class="title-tools">Scale</div>
+          <div class="slider-container">
+            <label for="scale-x" class="form-label">Scale-x</label>
+            <p id="scale-x-value" class="d-inline value-input">1</p>
+            <input id="scale-x" type="range" min="-5" max="5" value="1" step="0.1" class="form-range">
+            <label for="scale-y" class="form-label">Scale-y</label>
+            <p id="scale-y-value" class="d-inline value-input">1</p>
+            <input id="scale-y" type="range" min="-5" max="5" value="1" step="0.1" class="form-range">
+            <label for="scale-z" class="form-label">Scale-z</label>
+            <p id="scale-z-value" class="d-inline value-input">1</p>
+            <input id="scale-z" type="range" min="-5" max="5" value="1" step="0.1" class="form-range">
+          </div>
+        </div>
+      </div>
+      <div class="col-2">
+        <!-- Camera Slider -->
+        <div class="row">
+          <div class="title-tools"> Camera</div>
+          <div class="slider-container">
+            <label for="rotate" class="form-label">Rotate</label>
+            <p id="camera-rotate-value" class="d-inline value-input">0</p>
+            <input id="camera-rotate" type="range" min="-360" max="360" value="0" step="1" class="form-range">
+            <label for="radius" class="form-label">Radius</label>
+            <p id="camera-radius-value" class="d-inline value-input">5</p>
+            <input id="camera-radius" type="range" min="0" max="50" value="5" step="0.1" class="form-range">
+          </div>
+        </div>
+        <!-- Projection Selection -->
+        <div class="row mb-2">
+          <label for="projectionView" class="title-tools">Projection</label>
+          <select class="form-select mb-3" id="projection-view">
+            <option value="1" selected>Orthographic</option>
+            <option value="2">Oblique</option>
+            <option value="3">Perspective</option>
+          </select>
+        </div>
+        <!-- Shader Selection -->
+        <div class="row mb-2">
+          <label for="shader" class="title-tools">Shader</label>
+          <select class="form-select mb-3" id="shader-view">
+            <option value="1" selected>Non Active</option>
+            <option value="2">Active</option>
+          </select>
+        </div>
+        <!-- Load Section -->
+        <div class="row mb-5">
+          <label for="fileInput" class="title-tools">Load File</label>
+          <input class="form-control" type="file" id="fileinput" onchange="importData()">
+        </div>
+        <!-- Help Button -->
+        <div class="row mb-2 gap-3">
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Help
+          </button>
+          <button type="button" class="btn btn-secondary">
+            Reset
+          </button>
+        </div>
+      </div>
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Help Menu</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <h3>Proyeksi</h3>
+              <p>
+                Terdapat 3 opsi proyeksi yang bisa dipilih, yaitu Orthographic, Oblique, dan juga Perspective. Untuk
+                memilihnya
+                bisa dilakukan dengan mengklik tombol dropdown yang ada di sebelah kanan
+              </p>
+              <h3>Transformasi</h3>
+              <p>
+                Transformasi yang bisa dilakukan adalah rotate, translate, dan scale. Transformasi
+                bisa dilakukan dengan menggeser masing-masing slider yang ada. Efek dari slider-slider ini akan
+                bergantung pada objek yang dipilih. Slider juga akan berpengaruh sesuai dengan axis yang diubah
+              </p>
+              <h3>Kamera</h3>
+              <p>
+                Kamera yang digunakan adalah kamera 3D. Kamera ini bisa diubah dengan menggeser slider yang ada.
+                Slider yang ada adalah slider untuk rotate dan radius. Rotate akan mengubah sudut pandang kamera
+                sedangkan radius akan mengubah jarak kamera dengan objek yang ditampilkan
+              </p>
+              <h3>Reset</h3>
+              <p>
+                Dengan mengklik tombol reset, semua transformasi ataupun perubahan-perubahan yang telah dilakukan akan
+                kembali ke posisi awal
+              </p>
             </div>
           </div>
         </div>
-        <div class="col-2">
-          <!-- Camera Slider -->
-          <div class="row">
-            <div class="title-tools"> Camera</div>
-            <div class="slider-container">
-              <label for="rotate" class="form-label">Rotate</label>
-              <p id="camera-rotate-value" class="d-inline value-input">0</p>
-              <input id="camera-rotate" type="range" min="-360" max="360" value="0" step="1" class="form-range">
-              <label for="radius" class="form-label">Radius</label>
-              <p id="camera-radius-value" class="d-inline value-input">5</p>
-              <input id="camera-radius" type="range" min="0" max="50" value="5" step="0.1" class="form-range">
-            </div>
-          </div>
-          <!-- Projection Selection -->
-          <div class="row mb-2">
-            <label for="projectionView" class="title-tools">Projection</label>
-            <select class="form-select mb-3" id="projection-view">
-                <option value="1" selected>Perspective</option>
-                <option value="2">Orthographic</option>
-                <option value="3">Oblique</option>
-            </select>
-          </div>
-          <!-- Shader Selection -->
-          <div class="row mb-2">
-            <label for="shader" class="title-tools">Shader</label>
-            <select class="form-select mb-3" id="shader-view">
-                <option value="1" selected>Non Active</option>
-                <option value="2">Active</option>
-            </select>
-          </div>
-          <!-- Load Section -->
-          <div class="row mb-5">
-            <label for="fileInput" class="title-tools">Load File</label>
-            <input class="form-control" type="file" id="fileinput" onchange="importData()">
-          </div>
-          <!-- Help Button -->
-          <div class="row mb-2">
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              Help
-            </button>
       </div>
-    </div>
-    <!-- vertex shader
+      <!-- vertex shader
     <script id="vertex-shader-3d" type="x-shader/x-vertex">
       attribute vec4 a_position;
       attribute vec4 a_color;
@@ -123,7 +170,7 @@
       }
     </script>
     fragment shader -->
-    <!-- <script id="fragment-shader-3d" type="x-shader/x-fragment">
+      <!-- <script id="fragment-shader-3d" type="x-shader/x-fragment">
       precision mediump float;
       // Passed in from the vertex shader.
       varying vec4 v_color;
@@ -132,16 +179,18 @@
         gl_FragColor = v_color;
       }
     </script> -->
-    <!-- <script type="text/javascript" src="web-utils.js"></script>
+      <!-- <script type="text/javascript" src="web-utils.js"></script>
     <script type="text/javascript" src="web-lessons-ui.js"></script> -->
-    <script type="text/javascript" src="utils.js"></script>
-    <script type="text/javascript" src="state.js"></script>
-    <script type="text/javascript" src="webGL.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+      <script type="text/javascript" src="utils.js"></script>
+      <script type="text/javascript" src="state.js"></script>
+      <script type="text/javascript" src="webGL.js"></script>
+      <script type="text/javascript" src="main.js"></script>
 
-    <!-- <script type="text/javascript" src="scriptCube.js"></script> -->
+      <!-- <script type="text/javascript" src="scriptCube.js"></script> -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  </body>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
