isolate shader, add transformation per obj

--- a/src/index.html
+++ b/src/index.html
@@ -161,8 +161,9 @@
         </div>
       </div>
       <script type="text/javascript" src="utils.js"></script>
-      <script type="text/javascript" src="state.js"></script>
+      <script type="text/javascript" src="shader.js"></script>
       <script type="text/javascript" src="main.js"></script>
+      <script type="text/javascript" src="state.js"></script>
 
       <!-- <script type="text/javascript" src="scriptCube.js"></script> -->
 
