--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,7 @@
         <!-- Load Section -->
         <div class="row mb-3">
           <label for="fileInput" class="title-tools">Load File</label>
-          <input class="form-control" type="file" id="fileinput">
+          <input class="form-control" accept=".json" type="file" id="fileinput">
         </div>
         <!-- Save Section -->
         <div class="row mb-5 gap-2">
