--- a/src/index.html
+++ b/src/index.html
@@ -81,6 +81,12 @@
             <label for="rotate" class="form-label">Rotate</label>
             <p id="camera-rotate-value" class="d-inline value-input">0</p>
             <input id="camera-rotate" type="range" min="-360" max="360" value="0" step="1" class="form-range">
+            <div class="col gap-3">
+            <button id="button-zoom" class="btn btn-primary" onmousedown="updateZoom(1.1)">In</button>
+            <button id="button-zoom" class="btn btn-primary" onmousedown="updateZoom(0.9)">Out</button>
+            </div>
+
+
             <label for="radius" class="form-label">Radius</label>
             <p id="camera-radius-value" class="d-inline value-input">1</p>
             <input id="camera-radius" type="range" min="0" max="2" value="1" step="0.1" class="form-range">
