--- a/src/index.html
+++ b/src/index.html
@@ -152,8 +152,10 @@
               </p>
               <h3>Kamera</h3>
               <p>
-                Kamera yang digunakan adalah kamera 3D. Kamera ini bisa diubah dengan menggeser slider yang ada.
-                Slider yang ada adalah slider untuk rotate dan radius. Rotate akan mengubah sudut pandang kamera
+                Kamera yang digunakan adalah kamera 3D. Kamera ini bisa diubah dengan menggeser slider yang ada dan
+                menekan tombol In atau Out.
+                Slider yang ada adalah slider untuk mengatur rotasi kamera dan tombol In atau Out mengatur radius
+                kamera. Rotate akan mengubah sudut pandang kamera
                 sedangkan radius akan mengubah jarak kamera dengan objek yang ditampilkan
               </p>
               <h3>Reset</h3>
