--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,7 @@
             <label for="rotate" class="form-label">Rotate</label>
             <p id="camera-rotate-value" class="d-inline value-input">0</p>
             <input id="camera-rotate" type="range" min="-360" max="360" value="0" step="1" class="form-range">
+            <label for="rotate" class="form-label">Zoom</label>
             <div class="col gap-3">
               <button id="button-zoom" class="btn btn-primary" onmousedown="updateZoom(1.1)">In</button>
               <button id="button-zoom" class="btn btn-primary" onmousedown="updateZoom(0.9)">Out</button>
